--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: | 
         echo "Starting login"
-        docker login -u $DOCKER_USER -p DOCKER_PASSWORD
+        docker login -u deanminik -p dckr_pat_uM6rNSWBiLohXBUDWXyY-YETVg4
         echo "Login has ended"
     
 #    - name: Build the Docker image
