--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,14 @@ jobs:
         echo "Starting login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Login has ended"
+
+    - name: Build Docker Image
+      run: |
+        docker build -t deanminik/docker-graphql:0.0.2 .
+
+    - name: Push Docker Image
+      run: |
+        docker push -t deanminik/docker-graphql:0.0.2 .
     
 #    - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
