--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,10 +29,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t deanminik/docker-graphql:0.0.2 .
+        docker build -t deanminik/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
-        docker push deanminik/docker-graphql:0.0.2 
+        docker push deanminik/docker-graphql:0.0.2
+        docker push deanminik/docker-graphql:latest
     
 #    - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
