--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,21 +29,23 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION:  ${{ steps.version.outputs.version }}
         
       run: | 
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New Version: $NEW_VERSION!!!!!!!! :)"
 
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t deanminik/docker-graphql:0.0.2 .
-    #     docker build -t deanminik/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t deanminik/docker-graphql:$EW_VERSION .
+        docker build -t deanminik/docker-graphql:latest .
 
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push deanminik/docker-graphql:0.0.2
-    #     docker push deanminik/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push deanminik/docker-graphql:$EW_VERSION
+        docker push deanminik/docker-graphql:latest
     
 #    - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
